add fma benchmark